--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "PT Sans Normal";
+  src: url('fonts/ptsans-400.woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body, html{
   padding:0;
   margin:0;
@@ -133,6 +140,61 @@ li:has(> a:active ) {
   color: white;
   line-height: 13px;
 transform: translate(120%, 75%);
+}
+
+.welcome-screen{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.welcome-screen-banner{
+  display:flex;
+  background-image: url("./img/welcome-screen-background.jpg");
+  background-repeat: no-repeat;
+  background-size:100%;
+  width:100%;
+  height: 40vw/* 776px*/;
+  background-color: #756257;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.welcome-screen-hero-text{
+  position: absolute;
+  height:31vw;
+}
+
+
+
+.welcome-screen-devider{
+  width:100%;
+  align-self:flex-end;
+  height:7%;
+}
+
+.welcome-screen-slogan{
+  display: flex;
+  font-size: 30px;
+  font-weight: 700;
+  font-family: "PT Sans Bold";
+  color: #000000;
+  justify-self: center;
+  text-transform: uppercase;
+  width: 33%;
+  text-align: center;
+  margin-top:72px;
+}
+
+.welcome-screen-text{
+  font-family: "PT Sans Normal";
+font-size: 22px;
+font-weight: 400;
+line-height: 36px;
+text-align: center;
+
 }
 /* temporary  --------------------- ---------------- */
 /*
