--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,179 @@ line-height: 36px;
 text-align: center;
 
 }
+
+.advantages-grid{
+  display: grid;
+  grid-template-columns: 33.05vw 33.05vw 33.05vw;
+  grid-template-rows:
+    calc(33.05vw - 10%)
+    calc(33.05vw - 10%)
+    calc(33.05vw - 10%)
+    calc(33.05vw - 10%);
+    width:100%;
+    min-height: 100vh;
+    margin: 0 auto;
+    background:brown;
+}
+
+.advantage-real-town{
+  grid-row: 1;
+  grid-column: 1 / 1;
+  background: #83B3D3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.advantage-real-town-texts{
+  display: flex;
+  flex-direction: column;
+  width: 220px;
+  align-items: center;
+  color:white;
+}
+
+.advantage-real-town-texts h4{
+  font-family: "PT Sans Bold";
+  font-size: 24px;
+  line-height:28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.advantage-real-town-texts span{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+.advantage-real-town-texts p{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+.advantage-open-bange-img-container{
+  grid-row: 1;
+  grid-column: 2 / 4;
+  background: yellow;
+}
+
+.advantage-open-bange-img-container img{
+  width:100%;
+  height:auto;
+}
+
+.advantage-homes{
+  grid-row: 2;
+  grid-column: 1 / 1;
+  background: color-mix(in srgb, #83B3D3 12%, white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.advantage-homes-content{
+  width: 220px;
+  text-align: center;
+}
+
+
+.advantage-homes-content h5{
+  font-family: "PT Sans Bold";
+  font-size: 24px;
+  line-height:28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.advantage-homes-content p{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+
+
+
+.advantage-food{
+  grid-row: 2;
+  grid-column: 2 / 3;
+  background: white;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.advantage-food-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+}
+
+.advantage-food-content h5{
+  font-family: "PT Sans Bold";
+  font-size: 24px;
+  line-height:28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.advantage-food-content p{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+
+
+
+.advantage-suvenires{
+  grid-row: 2;
+  grid-column: 3 / 4;
+  background: color-mix(in srgb, #83B3D3 12%, white);
+}
+
+.advantage-canion-img-container{
+  grid-row: 3;
+  grid-column: 1 / 3;
+  background: yellow;
+}
+
+.advantage-diablo-bridge{
+  grid-row: 3;
+  grid-column: 3/ 4;
+  background: #83B3D3;
+}
+
+.advantages-compact-placing{
+  grid-row: 4;
+  grid-column: 1 / 2;
+  background: color-mix(in srgb, #83B3D3 12%, white);
+}
+
+.advantage-beautiful-road{
+  grid-row: 4;
+  grid-column: 2/ 3;
+  background: color-mix(in srgb, #83B3D3 20%, white);
+}
+
+.advantage-less-tourists{
+  grid-row: 4;
+  grid-column: 3 / 4;
+  background: color-mix(in srgb, #83B3D3 12%, white);
+}
+
 /* temporary  --------------------- ---------------- */
 /*
 .header, .header *{
