Advantages block css completed

--- a/styles.css
+++ b/styles.css
@@ -337,7 +337,37 @@ text-align: center;
   grid-row: 2;
   grid-column: 3 / 4;
   background: color-mix(in srgb, #83B3D3 12%, white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+
+.advantage-suvenires-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+}
+
+.advantage-suvenires-content h5{
+  font-family: "PT Sans Bold";
+  font-size: 24px;
+  line-height:28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.advantage-suvenires-content p{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+
+
 
 .advantage-canion-img-container{
   grid-row: 3;
@@ -345,28 +375,178 @@ text-align: center;
   background: yellow;
 }
 
+.advantage-canion-img{
+  width:100%;
+  height:auto;
+}
+
+
+
+
 .advantage-diablo-bridge{
   grid-row: 3;
   grid-column: 3/ 4;
   background: #83B3D3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.advantage-diablo-bridge-texts{
+  display: flex;
+  flex-direction: column;
+  width: 220px;
+  align-items: center;
+  color:white;
+}
+
+.advantage-diablo-bridge-texts h4{
+  font-family: "PT Sans Bold";
+  font-size: 24px;
+  line-height:28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.advantage-diablo-bridge-texts span{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+.advantage-diablo-bridge-texts p{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+
+
+
 
 .advantages-compact-placing{
   grid-row: 4;
   grid-column: 1 / 2;
   background: color-mix(in srgb, #83B3D3 12%, white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.advantages-compact-placing-texts{
+  display: flex;
+  flex-direction: column;
+  width: 230px;
+  align-items: center;
+}
+
+.advantages-compact-placing-texts h4{
+  font-family: "PT Sans Bold";
+  font-size: 24px;
+  line-height:28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.advantages-compact-placing-texts span{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+.advantages-compact-placing-texts p{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+
+
+
+
+
+
 
 .advantage-beautiful-road{
   grid-row: 4;
   grid-column: 2/ 3;
   background: color-mix(in srgb, #83B3D3 20%, white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.advantage-beautiful-road-texts{
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  align-items: center;
+}
+
+.advantage-beautiful-road-texts h4{
+  font-family: "PT Sans Bold";
+  font-size: 24px;
+  line-height:28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.advantage-beautiful-road-texts span{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+.advantage-beautiful-road-texts p{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
 
 .advantage-less-tourists{
   grid-row: 4;
   grid-column: 3 / 4;
   background: color-mix(in srgb, #83B3D3 12%, white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.advantage-less-tourists-texts{
+  display: flex;
+  flex-direction: column;
+  width: 210px;
+  align-items: center;
+}
+
+.advantage-less-tourists-texts h4{
+  font-family: "PT Sans Bold";
+  font-size: 24px;
+  line-height:28px;
+  text-transform: uppercase;
+  text-align: center;
+  width:180px;
+}
+
+.advantage-less-tourists-texts span{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
+}
+
+.advantage-less-tourists-texts p{
+  font-family: "PT Sans Normal";
+  font-size: 18px;
+  line-height:21px;
+  text-align: center;
 }
 
 /* temporary  --------------------- ---------------- */
