--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,13 @@ body, html{
   margin:0;
 }
 
+main{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: calc(100vh  - 120px - 70px);
+}
+
 .header{
   display: flex;
   height: 70px;
@@ -596,6 +603,152 @@ text-transform: uppercase;
 }
 
 
+
+.subscription{
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  width: 100%;
+  height:411px;
+  background-image: url("./img/subscription_background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
+
+.subscription-content{
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+  align-items: center;
+  height: 75%;
+}
+
+.subscription h5{
+  font-family: "PT Sans Bold";
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 36px;
+/* identical to box height, or 120% */
+text-align: center;
+text-transform: uppercase;
+/* basic/white */
+color: #FFFFFF;
+padding:0;
+margin:0;
+}
+
+
+/* Только полезная информация и никакого спама, честное бойскаутское! */
+.subscription p{
+font-family: 'PT Sans Normal';
+font-style: normal;
+font-weight: 400;
+font-size: 22px;
+line-height: 26px;
+/* or 118% */
+text-align: center;
+
+/* basic/white */
+color: #FFFFFF;
+}
+
+
+
+.subscription-form{
+  display:flex;
+  height:60px;
+  background: green;
+  width: 100%;
+}
+
+.subscription-input{
+  width:70%;
+  border-radius: 10px 0px 0px 10px;
+  padding-left: 20px;
+  border-style: none;
+
+  font-family: "PT Sans Normal";
+font-size: 18px;
+font-weight: 400;
+line-height: 26px;
+text-align: left;
+
+}
+
+.subscription-button{
+  width:30%;
+  border-radius: 0px 10px 10px 0px;
+  background: #83B3D3;
+  border-style: none;
+  font-family:"PT Sans Bold";
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 26px;
+  text-align: center;
+  color:white;
+
+}
+
+.footer{
+  display: flex;
+  height: 120px;
+  width: 100%;
+  xxpadding-left: 70px;
+  xxpadding-right: 70px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-network-icons{
+  display:flex;
+  xxbackground:green;
+  width: 107px;
+  height: 18px;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 70px;
+}
+
+.footer-network-icons a{
+  height: 15px;
+  width: 18px;
+  xxbackground-color: red;
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
+}
+
+.twitter-icon{
+  background-image: url("./img/social-twitter.png");
+}
+
+.facebook-icon{
+  background-image: url("./img/social-facebook.png");
+
+}
+
+.youtube-icon{
+  background-image: url("./img/social-youtube.png");
+}
+
+.footer-telephone-num-big{
+  font-family: "PT Sans Normal";
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 40px;
+  text-align: center;
+  color: #000000;
+}
+
+.footer-logo{
+  background-image: url("./img/logo_htmlacademy.png");
+  width: 115px;
+  height:34px;
+  margin-right: 70px;
+}
 /* temporary  --------------------- ---------------- */
 /*
 .header, .header *{
